<resources>
    <string name="app_name">Boop</string>
    <string name="textPlaceholder">Your Name</string>
    <string name="loginButtonText">Login</string>
    <string name="mainMenuTitle">Main Menu</string>
    <string name="startGameButton">Start Game</string>
    <string name="highScoresButton">High Scores</string>
    <string name="logsButton">Logs</string>
    <string name="initScore">Score: 00</string>
    <string name="initTimer">Seconds left: 03.00</string>
    <string name="initGPS">GPS init...</string>
    <string name="wifiInit">Network</string>
    <string name="highScoreTitle">High Scores</string>
    <string name="emptyPlaceHolder"> </string>
    <string name="gameOver">Game Over!</string>
    <string name="yourScoreIs">Your score:</string>
    <string name="logsTitle">Logs</string>
    <string name="inputHint">Also Your Name</string>
</resources>
